<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ImageView
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:id="@+id/imageView2"
        android:background="@drawable/worcester_polytechnic_institute_wordone"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/SearchForText"
        android:textSize="20dp"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginRight="20dp"
        android:textColor="@android:color/black"
        android:text="Search through location and event type"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Spinner
            android:id="@+id/spinner3"
            android:background="#c13341"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="20dp"
            android:entries="@array/query_array3"
            android:layout_weight="1"
            android:layout_marginTop="20dp" />

        <Spinner
            android:id="@+id/spinner2"
            android:background="#c13341"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginRight="20dp"
            android:entries="@array/query_array2"
            android:layout_weight="1"
            android:layout_marginTop="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="445dp"
            android:layout_height="55dp"
            android:layout_marginLeft="-9dp"
            android:text="Search"
            android:id="@+id/search_button2"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0"
            android:textColor="@android:color/black"
            android:background="@drawable/button_background1"
            android:textAllCaps="false"
            android:textSize="20dp"
             />



    </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/eventid"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:layout_marginLeft="-30dp"/>

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/EventName"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:layout_marginLeft="20dp" />
        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/EventDate"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/EventTime"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/EventLocation"
            android:textColor="@android:color/black"
            android:textSize="15sp" />


    </LinearLayout>

    <ListView
        android:id="@+id/show_listview"
        android:background="@drawable/wpi_whitelogo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></ListView>


</LinearLayout>